dxscale/sales/opportunityAssignment/objects/Opportunity_Assignment__c/Opportunity_Assignment__c.object-meta.xml
<CustomObject>
    <description>Used to trigger update to Opportunity record owners via the Data Import Wizard</description>
    <label>Opportunity Assignment</label>
    <nameField>
        <displayFormat>OASS-{000000}</displayFormat>
        <label>Opportunity Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>