dxscale/sales/opportunityAssignment/objects/Opportunity_Assignment__c/fields/Amount_ACV__c.field-meta.xml
<CustomField>
    <fullName>Amount_ACV__c</fullName>
    <description>Same as Opportunity-Amount_ACV</description>
    <label>Annual Contract Value (ACV)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>