dxscale/sales/opportunityAssignment/objects/Opportunity_Assignment__c/fields/Annual_Sales_Booking_ASB__c.field-meta.xml
<CustomField>
    <fullName>Annual_Sales_Booking_ASB__c</fullName>
    <description>Same as Opportunity-Annual_Sales_Booking_ASB__c</description>
    <label>Annual Sales Booking (ASB)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>