dxscale/sales/opportunityAssignment/objects/Opportunity_Assignment__c/fields/Assignee__c.field-meta.xml
<CustomField>
    <fullName>Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User whom the target Opportunity is intended to be owned by.</description>
    <inlineHelpText>User whom the target Opportunity is intended to be owned by.</inlineHelpText>
    <label>Assignee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunity_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>