dxscale/sales/opportunityAssignment/objects/Opportunity_Assignment__c/fields/CloseDate__c.field-meta.xml
<CustomField>
    <fullName>CloseDate__c</fullName>
    <description>Same as Opportunity-CloseDate</description>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>