dxscale/sales/opportunityAssignment/objects/Opportunity_Assignment__c/fields/Contract_Due_Date_For_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Contract_Due_Date_For_Renewal__c</fullName>
    <description>Same as Opportunity-Contract_Due_Date_For_Renewal</description>
    <label>Due Date For Renewal</label>
    <type>Date</type>
</CustomField>