dxscale/sales/opportunityAssignment/objects/Opportunity_Assignment__c/fields/Discovery_Notes__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Notes__c</fullName>
    <description>Same as Opportunity-Qualification Notes</description>
    <label>Qualification Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>