dxscale/sales/opportunityAssignment/objects/Opportunity_Assignment__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <description>Same as Opportunity-Opportunity/Lead Source</description>
    <label>Opportunity/Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lead_Source</valueSetName>
    </valueSet>
</CustomField>