dxscale/sales/opportunityAssignment/objects/Opportunity_Assignment__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>Opportunity which requires owner to be reassigned.</description>
    <inlineHelpText>Opportunity which requires owner to be reassigned.</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Assignments</relationshipLabel>
    <relationshipName>Opportunity_Assignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>