dxscale/sales/opportunityAssignment/objects/Opportunity_Assignment__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <description>Same as Opportunity-Opportunity Name</description>
    <label>Opportunity Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>