dxscale/sales/opportunityAssignment/objects/Opportunity_Assignment__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <description>Diagnostic information for failed updates</description>
    <inlineHelpText>Diagnostic information for failed updates</inlineHelpText>
    <label>Outcome</label>
    <length>200</length>
    <type>Text</type>
</CustomField>