dxscale/sales/opportunityAssignment/objects/Opportunity_Assignment__c/fields/Pain_Points_w_Current_Solution__c.field-meta.xml
<CustomField>
    <fullName>Pain_Points_w_Current_Solution__c</fullName>
    <description>Same as Opportunity-Pain_Points_w_Current_Solution__c</description>
    <label>Other Pain Points w/ Current Solution</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>