dxscale/sales/opportunityAssignment/objects/Opportunity_Assignment__c/fields/Renewal_Billingfilefullvalue__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Billingfilefullvalue__c</fullName>
    <description>This field is created for data import wizard EAD-1991</description>
    <label>Billing file full value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>