dxscale/sales/opportunityAssignment/objects/Opportunity_Assignment__c/fields/Renewal_BillingPeriod__c.field-meta.xml
<CustomField>
    <fullName>Renewal_BillingPeriod__c</fullName>
    <description>This field is created for data import wizard EAD-1991</description>
    <label>Billing Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Half yearly</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>