dxscale/sales/opportunityAssignment/objects/Opportunity_Assignment__c/fields/Renewal_FirstBillingDate__c.field-meta.xml
<CustomField>
    <fullName>Renewal_FirstBillingDate__c</fullName>
    <description>This field is created for data import wizard EAD-1991</description>
    <label>First Billing Date</label>
    <type>Date</type>
</CustomField>