dxscale/sales/opportunityAssignment/objects/Opportunity_Assignment__c/fields/Renewal_InterventionDate__c.field-meta.xml
<CustomField>
    <fullName>Renewal_InterventionDate__c</fullName>
    <description>This field is created for data import wizard EAD-1991</description>
    <label>Intervention Date (Renewal)</label>
    <type>Date</type>
</CustomField>