dxscale/sales/opportunityAssignment/objects/Opportunity_Assignment__c/fields/Renewal_PromisePaiddate__c.field-meta.xml
<CustomField>
    <fullName>Renewal_PromisePaiddate__c</fullName>
    <description>This field is created for data import wizard EAD-1991</description>
    <label>Promise Paid Date</label>
    <type>Date</type>
</CustomField>