dxscale/sales/opportunityAssignment/objects/Opportunity_Assignment__c/fields/Renewal_Yearlyvaluebeingrenewed__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Yearlyvaluebeingrenewed__c</fullName>
    <description>This field is created for data import wizard EAD-1991</description>
    <label>Yearly value being renewed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 year</fullName>
            </value>
            <value>
                <fullName>2 year</fullName>
            </value>
            <value>
                <fullName>3 year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>