dxscale/sales/opportunityAssignment/objects/Opportunity_Assignment__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>Same as Opportunity-Stage</description>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Discovery</fullName>
            </value>
            <value>
                <fullName>Evaluating</fullName>
            </value>
            <value>
                <fullName>Solution Validation</fullName>
            </value>
            <value>
                <fullName>Confirming Value</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Qualify</fullName>
            </value>
            <value>
                <fullName>Selection</fullName>
            </value>
            <value>
                <fullName>Negotiating</fullName>
                <isActive>false</isActive>
                <label>Negotiating</label>
            </value>
            <value>
                <fullName>Qualification</fullName>
                <isActive>false</isActive>
                <label>Qualification</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>