dxscale/sales/opportunityAssignment/objects/Opportunity_Assignment__c/fields/Total_Contract_Value_TCV_forecast__c.field-meta.xml
<CustomField>
    <fullName>Total_Contract_Value_TCV_forecast__c</fullName>
    <description>Same as Opportunity-Total_Contract_Value_TCV_forecast</description>
    <label>Total Contract Value (TCV)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>