dxscale/sales/opportunityAssignment/objects/Opportunity_Assignment__c/fields/Why_We_Lost__c.field-meta.xml
<CustomField>
    <fullName>Why_We_Lost__c</fullName>
    <description>Same as Opportunity-Why_We_Lost__c</description>
    <label>Win / Loss / Reject Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brand</fullName>
            </value>
            <value>
                <fullName>FaaS</fullName>
            </value>
            <value>
                <fullName>No Decision</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Product Integration</fullName>
            </value>
            <value>
                <fullName>Proposition</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>System Intergration</fullName>
            </value>
            <value>
                <fullName>User Experience</fullName>
            </value>
            <value>
                <fullName>Nurture Lead</fullName>
            </value>
            <value>
                <fullName>Rejected SQL</fullName>
            </value>
            <value>
                <fullName>Payment Method (e.g. Monthly, annually)</fullName>
            </value>
            <value>
                <fullName>Product Functionality / Usability</fullName>
            </value>
            <value>
                <fullName>Sales/Marketing Process</fullName>
            </value>
            <value>
                <fullName>Relationship with Sage</fullName>
            </value>
            <value>
                <fullName>Change in customer&apos;s business</fullName>
            </value>
            <value>
                <fullName>Unable to contact</fullName>
            </value>
            <value>
                <fullName>No reason specified</fullName>
            </value>
            <value>
                <fullName>Payment Method</fullName>
            </value>
            <value>
                <fullName>Production Functionality / Usability</fullName>
            </value>
            <value>
                <fullName>References</fullName>
            </value>
            <value>
                <fullName>Timescale to implement</fullName>
            </value>
            <value>
                <fullName>Compliance with legislation</fullName>
            </value>
            <value>
                <fullName>Not ready to make a decision</fullName>
            </value>
            <value>
                <fullName>False Opportunity</fullName>
            </value>
            <value>
                <fullName>Withdrawal from bid process</fullName>
            </value>
            <value>
                <fullName>No Project</fullName>
            </value>
            <value>
                <fullName>No Budget</fullName>
            </value>
            <value>
                <fullName>Needs Default</fullName>
            </value>
            <value>
                <fullName>No Decision Maker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>