dxscale/sales/opportunityAssignment/objects/Opportunity_Assignment__c/fields/Win_Loss_Other_Reason__c.field-meta.xml
<CustomField>
    <fullName>Win_Loss_Other_Reason__c</fullName>
    <description>Same as Opportunity-Win_Loss_Other_Reason</description>
    <label>Win / Loss / Reject Comments</label>
    <type>TextArea</type>
</CustomField>