dxscale/sales/opportunityAssignment/objects/Opportunity_Assignment__c/fields/Win_Loss_Reject_Reasons_Level1__c.field-meta.xml
<CustomField>
    <fullName>Win_Loss_Reject_Reasons_Level1__c</fullName>
    <description>Same as Opportunity-Win_Loss_Reject_Reasons_Level1__c</description>
    <label>Win/Loss/Reject Reasons Level1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Won From NA</fullName>
            </value>
            <value>
                <fullName>Won From UK</fullName>
            </value>
            <value>
                <fullName>Lost From NA</fullName>
            </value>
            <value>
                <fullName>Lost From UK</fullName>
            </value>
            <value>
                <fullName>Feature Requirement</fullName>
            </value>
            <value>
                <fullName>Retention Conversation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>OutSourced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>