dxscale/sales/opportunityAssignment/objects/Opportunity_Assignment__c/fields/Win_Loss_Reject_Reasons_Level2__c.field-meta.xml
<CustomField>
    <fullName>Win_Loss_Reject_Reasons_Level2__c</fullName>
    <description>Same as Opportunity-Win_Loss_Reject_Reasons_Level2</description>
    <label>Win/Loss/Reject Reasons Level2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Xero</fullName>
            </value>
            <value>
                <fullName>Quickbooks</fullName>
            </value>
            <value>
                <fullName>Moneysoft</fullName>
            </value>
            <value>
                <fullName>Iris</fullName>
            </value>
            <value>
                <fullName>Brightpearl</fullName>
            </value>
            <value>
                <fullName>Deskera</fullName>
            </value>
            <value>
                <fullName>Dolibarr</fullName>
            </value>
            <value>
                <fullName>Microsoft Dynamics GP</fullName>
            </value>
            <value>
                <fullName>Microsoft Dynamics NAV</fullName>
            </value>
            <value>
                <fullName>Odoo</fullName>
            </value>
            <value>
                <fullName>Stafiz</fullName>
            </value>
            <value>
                <fullName>SYSPRO</fullName>
            </value>
            <value>
                <fullName>Upgrade Product</fullName>
            </value>
            <value>
                <fullName>Upgrade Support</fullName>
            </value>
            <value>
                <fullName>Downgrade Product</fullName>
            </value>
            <value>
                <fullName>Discount</fullName>
            </value>
            <value>
                <fullName>Full Value</fullName>
            </value>
            <value>
                <fullName>Downgrade Support</fullName>
            </value>
            <value>
                <fullName>Extension</fullName>
            </value>
            <value>
                <fullName>Accountant</fullName>
            </value>
            <value>
                <fullName>BP</fullName>
            </value>
            <value>
                <fullName>No migration Tool</fullName>
            </value>
            <value>
                <fullName>Bureau</fullName>
            </value>
            <value>
                <fullName>Other (please specify in notes)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>