dxscale/sales/opportunityAssignment/objects/Opportunity_Assignment__c/fields/Win_Loss_Reject_Reasons_Level3__c.field-meta.xml
<CustomField>
    <fullName>Win_Loss_Reject_Reasons_Level3__c</fullName>
    <description>Same as  Opportunity-Win_Loss_Reject_Reasons_Level3</description>
    <label>Win/Loss/Reject Reasons Level3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Functionality</fullName>
            </value>
            <value>
                <fullName>Accountant Recommended (please specify in notes)</fullName>
            </value>
            <value>
                <fullName>Group Alignment</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>System Integration</fullName>
            </value>
            <value>
                <fullName>Competent User</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>